Camino only - Bug 364380: Don't open duplicate copies of pages when using AE. r=stridey sr=pink