camino/src/browser/BrowserTabView.h
@@ -69,6 +69,7 @@ extern NSString* const kTabBarBackgroundDoubleClickedNotification;
 
 - (BOOL)tabsVisible;
 
+- (int)indexOfTabViewItemWithURL:(NSString*)aURL;
 - (BrowserTabViewItem*)itemWithTag:(int)tag;
 - (void)refreshTabBar:(BOOL)rebuild;
 - (void)refreshTab:(BrowserTabViewItem*)tab;
