camino/src/browser/BrowserTabView.mm
@@ -196,6 +196,22 @@ NSString* const kTabBarBackgroundDoubleClickedNotification = @"kTabBarBackground
   return nil;
 }
 
+- (int)indexOfTabViewItemWithURL:(NSString*)aURL
+{
+  // Try the selected tab first.
+  if ([[(BrowserWrapper*)[[self selectedTabViewItem] view] getCurrentURI] isEqualToString:aURL])
+    return [self indexOfTabViewItem:[self selectedTabViewItem]];
+  // Otherwise just walk all the tabs and return the first match.
+  NSArray* tabViewItems = [self tabViewItems];
+  for (unsigned int i = 0; i < [tabViewItems count]; i++) {
+    id tab = [tabViewItems objectAtIndex:i];
+    if ([[(BrowserWrapper*)[tab view] getCurrentURI] isEqualToString:aURL]) {
+      return i;
+    }
+  }
+  return NSNotFound;
+}
+
 /******************************************/
 /*** Accessor Methods                   ***/
 /******************************************/
